# GDR

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FindTBB.cmake  LICENSE  README.md  testICPCUDA.cpp
cmake/modules/: FindTBB.cmake
data/files/: absolutePosesFirstPoseZero.txt  absolutePosesICP_19.txt  absolutePoses_19_less.txt  absolutePoses_4.txt  pairWiseFirstPoseZero_19_less.txt
data/plantDataset_19_3/: groundtruth_new.txt
data/plantFirst_20_2/: relative_groundtruth.txt
data/plantSampled_20/: groundtruth_new.txt
data/plant_sampled_19_3/: assoc.txt  depth.txt  groundtruth.txt  rgb.txt
include/: AbsolutePose.h  BundleAduster.cpp  BundleAduster.h  CG.h  CloudProjector.h  ConnectedComponent.h  CorrespondenceGraph.h  ICP.h  ISiftModule.h  ImageDrawer.h  ImagesAssociator.cpp  KeyPoint2D.h  KeyPointInfo.h  KeyPointsDepthDescriptor.h  LossFunctions.h  LossHuber.h  Point3d.h  PointMatcher.h  RelativePoseSE3.h  Rotation3d.h  RotationOptimizationRobust.h  SiftModuleGPU.h  SmoothPointCloud.cpp  SmoothPointCloud.h  ThreadPool.h  Vectors3d.h  VertexCG.h  cameraRGBD.h  errors.h  essentialMatrix.h  features.h  fileProc.h  files.h  groundTruthTransformer.h  images.h  keyFeatures.h  pointCloud.h  poseEstimation.h  poseInfo.h  printer.h  (+12 more)
include/bundleAdjustment/: BundleAdjuster.h  BundleAdjusterCreator.h  BundleDepthAdjuster.h  IBundleAdjuster.h
include/cameraModel/: CameraRGBD.h  MeasurementErrorDeviationEstimators.h
include/computationHandlers/: AbsolutePosesComputationHandler.cpp  AbsolutePosesComputationHandler.h  CorrespondenceGraphHandler.h  ModelCreationHandler.h  RelativePosesComputationHandler.h  ThreadPool.h  ThreadPoolTBB.h  TimerClockNow.h
include/datasetDescriber/: DatasetCameraDescriber.h  DatasetDescriber.h  DatasetStructure.h
include/directoryTraversing/: DirectoryReader.h
include/filesystem/: fileProc.h
include/keyPointDetectionAndMatching/: FeatureDetector.h  FeatureDetectorMatcher.h  FeatureDetectorMatcherCreator.h  IFeatureDetectorMatcher.h  ISiftModule.h  ImageRetriever.cpp  ImageRetriever.h  KeyPointsAndDescriptors.h  Match.h  SiftModuleGPU.h
include/keyPoints/: KeyPoint2D.h  KeyPoint2DAndDepth.h  KeyPointInfo.h  KeyPointMatches.h  KeyPointsDepthDescriptor.h
include/parametrization/: AssociatedImages.h  CameraRGBD.h  MatchableInfo.h  Point2d.h  Point3d.h  PointXYZRGBfloatUchar.h  PoseFullInfo.h  Reconstructable.h  RelativePoseSE3.h  RelativeSE3.h  Rotation3d.h  SE3.h  SO3.h  SparseMatrixClass.h  Vectors3d.h  cameraRGBD.h  transformationRt.h
include/poseGraph/: ConnectedComponent.h  CorrespondenceGraph.h  PoseGraph.cpp  PoseGraph.h  PosesForEvaluation.cpp  PosesForEvaluation.h  RelativeSE3.h  VertexCG.h  VertexPose.h
include/readerTUM/: ImagesAssociator.h  PoseFullInfo.h  ReaderTum.h  poseInfo.h
include/relativePoseEstimators/: Estimator3Points.h  EstimatorNPoints.h  EstimatorRelativePoseRobust.h  EstimatorRelativePoseRobustCreator.h  EstimatorRobustLoRANSAC.h  IEstimatorRelativePoseRobust.h  InlierCounter.h  ParamsRANSAC.h
include/relativePoseRefinement/: ICP.h  ICPCUDA.h  IRefinerRelativePose.h  RefinerRelativePose.h  RefinerRelativePoseCreator.cpp  RefinerRelativePoseCreator.h
include/sparsePointCloud/: CloudProjector.h  CloudProjectorCreator.cpp  CloudProjectorCreator.h  CloudProjectorStl.h  ICloudProjector.h  IPointClassifier.h  IPointMatcher.h  PointClassifier.h  PointClassifierCreator.cpp  PointClassifierCreator.h  PointClassifierStl.h  PointMatcher.h  ProjectableInfo.cpp  ProjectableInfo.h
include/statistics/: RobustEstimators.h
lib/: CMakeLists.txt
lib/SiftGPU/: CMakeLists.txt  SiftGPU.cpp  SiftGPU.h
siftgpu/: makefile
src/: AbsolutePose.cpp  BundleAduster.cpp  CG.cpp  CloudProjector.cpp  ConnectedComponent.cpp  CorrespondenceGraph.cpp  ICP.cpp  ImageDrawer.cpp  KeyPoint2D.cpp  KeyPointInfo.cpp  KeyPointsDepthDescriptor.cpp  LossHuber.cpp  Point3d.cpp  PointMatcher.cpp  RelativePoseSE3.cpp  Rotation3d.cpp  RotationOptimizationRobust.cpp  SiftModuleGPU.cpp  SmoothPointCloud.cpp  ThreadPool.cpp  Vectors3d.cpp  VertexCG.cpp  cameraRGBD.cpp  essentialMatrix.cpp  features.cpp  fileProc.cpp  files.cpp  groundTruthTransformer.cpp  images.cpp  keyFeatures.cpp  pointCloud.cpp  poseEstimation.cpp  poseInfo.cpp  quaternions.cpp  relativePose.cpp  rotationAveraging.cpp  rotationMeasurement.cpp  siftModule.cpp  transformationRt.cpp  translationAveraging.cpp  (+4 more)
src/bundleAdjustment/: BundleAdjuster.cpp  BundleAdjusterCreator.cpp  BundleDepthAdjuster.cpp
src/cameraModel/: CameraRGBD.cpp  MeasurementErrorDeviationEstimators.cpp
src/computationHandlers/: AbsolutePosesComputationHandler.cpp  CorrespondenceGraphHandler.cpp  ModelCreationHandler.cpp  RelativePosesComputationHandler.cpp  ThreadPool.cpp  ThreadPoolTBB.cpp  TimerClockNow.cpp
src/datasetDescriber/: DatasetCameraDescriber.cpp  DatasetDescriber.cpp
src/directoryTraversing/: DirectoryReader.cpp
src/filesystem/: fileProc.cpp
src/keyPointDetectionAndMatching/: FeatureDetector.cpp  FeatureDetectorMatcherCreator.cpp  (+4 more)
test/: CMakeLists.txt  FindGlew.cmake  main.cpp  prepareDataset.cpp  testAbsolutePoseStructure.cpp  testAbsoluteRotationsComputation.cpp  testAbsoluteTranslationsComputation.cpp  testAccuracyBA.cpp  testBundleAdjustment.cpp  testBundleFusionReader.cpp  testConnectedComponent.cpp  testEigen.cpp  testGDR.cpp  testGDR_1.cpp  testGTSAM.cpp  testICP.cpp  testImageAssociator.cpp  testLoRANSAC.cpp  testPoint3dRepresentation.cpp  testPointCloudCorrespondences.cpp  testPoseFileCreation.cpp  testRelativePoseExtraction.cpp  testRelativePosesComputation.cpp  testRobustRotationOptimization.cpp  testRotationAveraging.cpp  testRotationRepresentation.cpp  testRotationRobustOptimization.cpp  testTranslationAveraging.cpp  testUmeyamaRansac.cpp  testVectors3dRepresentation.cpp  testVisualizePointCloud.cpp  transformGroundTruth.cpp  trysift.cpp
test/reconstructor/: TesterReconstruction.cpp  TesterReconstruction.h  imageAssociator.cpp  reconstructorTum.cpp  visualizerTum.cpp
test_siftgpu/: CMakeLists.txt  FindTBB.cmake  main.cpp  transformGroundTruth.cpp  trysift.cpp
(+112 files in other folders)
